<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/itemImage"
            android:src="@drawable/one_up"
            android:maxHeight="80dp"
            android:maxWidth="80dp"
            android:layout_alignTop="@+id/itemName"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/one_up"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/itemName"
            android:id="@+id/itemName"
            android:textSize="25sp"
            android:layout_below="@+id/title_inventory_management_system"
            android:layout_toEndOf="@+id/itemImage" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/itemPrice"
            android:id="@+id/itemPrice"
            android:layout_below="@+id/itemName"
            android:layout_alignRight="@+id/title_inventory_management_system"
            android:layout_alignEnd="@+id/title_inventory_management_system" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/itemDate"
            android:id="@+id/itemDate"
            android:layout_below="@+id/itemName"
            android:layout_toEndOf="@+id/itemImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/itemQuantity"
            android:id="@+id/itemQuantity"
            android:layout_below="@+id/title_inventory_management_system"
            android:layout_toEndOf="@+id/itemName"
            android:layout_marginLeft="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/itemNumber"
            android:id="@+id/itemNumber"
            android:layout_alignRight="@+id/itemPrice"
            android:layout_alignEnd="@+id/itemPrice"
            android:layout_above="@+id/itemPrice"
            android:layout_toRightOf="@+id/itemQuantity"
            android:layout_toEndOf="@+id/itemQuantity"
            android:gravity="right"
            android:layout_below="@+id/title_inventory_management_system"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/title_inventory_management_system"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:textSize="25sp"
            android:text="@string/inventory_management_system"
            android:layout_marginTop="15dp" />

    </RelativeLayout>
</LinearLayout>