<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nathaniel.a1up.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/addButton"
            android:id="@+id/buttonAdd"
            android:layout_gravity="right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="false" />

        <TabHost
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabHost"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/tabCreator"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/add_1up_to_inventory"
                            android:id="@+id/titleAdd1UPToInventory"
                            android:layout_gravity="center_horizontal"
                            android:textSize="25sp"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/enteredName"
                            android:hint="@string/nameEntered" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/enteredNumber"
                            android:hint="Number/ID" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/enteredQuantity"
                            android:hint="@string/quantityEntered" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:ems="10"
                            android:id="@+id/enteredPrice"
                            android:hint="@string/priceEntered" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:id="@+id/enteredDate"
                            android:hint="@string/dateEntered" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageOpenBox"
                            android:src="@drawable/open_box"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/openbox" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tabList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:clickable="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/inventory_list"
                            android:id="@+id/title_inventory_list"
                            android:layout_marginTop="15sp"
                            android:layout_marginBottom="15sp"
                            android:textSize="30sp"
                            android:layout_gravity="center_horizontal" />

                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/listView" />
                    </LinearLayout>

                </FrameLayout>
            </LinearLayout>
        </TabHost>

    </RelativeLayout>

</LinearLayout>
